[package]
name = "code-snap"
version = "0.1.0"
authors = ["Askar Yusupov <devex.soft@gmail.com>"]
description = "A library to create a screenshot from code."
license = "MIT"
repository = "https://github.com/pyoner/code-snap"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
codesnap = "0.12.9"
serde = { version = "1.0.219", features = ["derive"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
